kubernetes/apps/network/external-services/homeassistant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app homeassistant
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.100.20
  ports:
    - name: ha
      port: 8123
      protocol: TCP
      targetPort: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app homeassistant
  namespace: network
spec:
  ingressClassName: internal
  rules:
    - host: &host hass.davidapps.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
