kubernetes/apps/network/external-services/raspberry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app raspberry
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.100.20
  ports:
    - name: zigbee2mqtt
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: portainer
      port: 9000
      protocol: TCP
      targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raspberry
  namespace: network
spec:
  ingressClassName: internal
  rules:
    - host: &host zigbee.davidapps.dev
      zigbee:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: raspberry
                port:
                  number: 8080
    - host: &hostainer portainer.davidapps.dev
      portainer:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: raspberry
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
        - *hostainer
