kubernetes/apps/network/external-services/zigbee.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app zigbee2mqtt
  namespace: network
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 192.168.100.20
  ports:
    - name: http
      port: &port 8080
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: network
spec:
  ingressClassName: internal
  rules:
    - host: &host zigbee.davidapps.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
  tls:
    - hosts: [*host]
